fix badge in mobile screen, modify woowa to 50manwon, modify yearly header position, modify table align

--- a/front/components/Badge.module.css
+++ b/front/components/Badge.module.css
@@ -6,8 +6,8 @@
 
 .badge {
     display: inline-block;
-    padding-right: 7px;
-    padding-left: 7px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 .aptitude:hover::after {
